--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,7 +3,7 @@ updates:
     - package-ecosystem: 'npm'
       directory: '/'
       schedule:
-          interval: 'daily'
+          interval: 'weekly'
       target-branch: 'main'
       open-pull-requests-limit: 20
       labels:
