--- a/special-pages/package.json
+++ b/special-pages/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "preact": "^10.24.3",
+    "@preact/signals": "^1.3.1",
     "classnames": "^2.5.1",
     "@formkit/auto-animate": "^0.8.2",
     "@rive-app/canvas-single": "^2.23.10",
