--- a/special-pages/pages/new-tab/messages/types/settings.json
+++ b/special-pages/pages/new-tab/messages/types/settings.json
@@ -10,6 +10,10 @@
         "state": {
           "type": "string",
           "enum": ["enabled", "disabled"]
+        },
+        "autoOpen": {
+          "description": "Should the customizer drawer be opened on page load?",
+          "type": "boolean"
         }
       }
     }
