--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@duckduckgo/content-scope-scripts",
   "license": "Apache-2.0",
   "files": [
+    "scripts",
     "injected",
     "special-pages",
     "messaging",
