--- a/special-pages/package.json
+++ b/special-pages/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "create": "node scripts/create-special-page.mjs",
     "prebuild": "node types.mjs && node translations.mjs",
     "build": "node index.mjs",
     "build.dev": "npm run build -- --env development",
