figuring out persistence

--- a/special-pages/pages/new-tab/messages/types/stats-config.json
+++ b/special-pages/pages/new-tab/messages/types/stats-config.json
@@ -5,6 +5,17 @@
   "required": ["expansion"],
   "properties": {
     "expansion": {"$ref": "expansion.json"},
-    "animation": {"$ref": "animation.json"}
+    "animation": {"$ref": "animation.json"},
+    "onboarding": {
+      "oneOf": [
+        {
+          "type": "null"
+        },
+        {
+          "type": "string",
+          "enum": ["history"]
+        }
+      ]
+    }
   }
 }
