--- a/special-pages/package.json
+++ b/special-pages/package.json
@@ -27,19 +27,20 @@
   "license": "ISC",
   "devDependencies": {
     "@duckduckgo/messaging": "*",
+    "chokidar": "^4.0.3",
     "esbuild": "^0.24.2",
-    "http-server": "^14.1.1",
-    "web-resource-inliner": "^6.0.1",
     "fast-check": "^3.23.2",
-    "chokidar": "^4.0.3"
+    "http-server": "^14.1.1",
+    "web-resource-inliner": "^6.0.1"
   },
   "dependencies": {
-    "preact": "^10.24.3",
-    "@preact/signals": "^1.3.1",
-    "classnames": "^2.5.1",
-    "@formkit/auto-animate": "^0.8.2",
-    "@rive-app/canvas-single": "^2.25.3",
     "@atlaskit/pragmatic-drag-and-drop": "^1.3.1",
-    "@atlaskit/pragmatic-drag-and-drop-hitbox": "^1.0.3"
+    "@atlaskit/pragmatic-drag-and-drop-hitbox": "^1.0.3",
+    "@formkit/auto-animate": "^0.8.2",
+    "@preact/signals": "^2.0.1",
+    "@rive-app/canvas-single": "^2.25.3",
+    "classnames": "^2.5.1",
+    "lottie-web": "^5.12.2",
+    "preact": "^10.25.4"
   }
 }
