--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@duckduckgo/eslint-config": "github:duckduckgo/eslint-config#v0.1.0",
     "@playwright/test": "^1.50.1",
+    "esbuild": "^0.25.0",
     "eslint": "^9.21.0",
     "minimist": "^1.2.8",
     "prettier": "3.4.2",
