legacy command to keep the extension building

--- a/injected/package.json
+++ b/injected/package.json
@@ -6,6 +6,7 @@
     "build": "npm run build-types && npm run build-locales && npm run bundle-trackers && npm run bundle-entry-points",
     "bundle-config": "node scripts/bundleConfig.mjs",
     "bundle-entry-points": "node scripts/entry-points.js",
+    "build-chrome-mv3": "node scripts/entry-points.js",
     "build-locales": "node scripts/buildLocales.js",
     "build-types": "node scripts/types.mjs",
     "bundle-trackers": "node scripts/bundleTrackers.mjs --output ../build/tracker-lookup.json",
