--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,10 +20,10 @@ jobs:
                 os: [ubuntu-latest, windows-latest]
         steps:
             - uses: actions/checkout@v4
-            - name: Use Node.js 22
+            - name: Use Node.js
               uses: actions/setup-node@v4
               with:
-                  node-version: 22.x
+                  node-version-file: '.nvmrc'
             - uses: actions/cache@v4
               with:
                   path: ~/.npm
@@ -42,10 +42,10 @@ jobs:
         timeout-minutes: 10
         steps:
             - uses: actions/checkout@v4
-            - name: Use Node.js 22
+            - name: Use Node.js
               uses: actions/setup-node@v4
               with:
-                  node-version: 22.x
+                  node-version-file: '.nvmrc'
             - uses: actions/cache@v4
               with:
                   path: ~/.npm
@@ -85,10 +85,10 @@ jobs:
             url: ${{ steps.deployment.outputs.page_url }}
         steps:
             - uses: actions/checkout@v4
-            - name: Use Node.js 22
+            - name: Use Node.js
               uses: actions/setup-node@v4
               with:
-                  node-version: 22.x
+                  node-version-file: '.nvmrc'
             - name: Cache build outputs
               id: docs-output
               uses: actions/cache@v4
