--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -15,10 +15,10 @@ jobs:
             - name: Checkout repository
               uses: actions/checkout@v4
 
-            - name: Use Node.js 20
+            - name: Use Node.js
               uses: actions/setup-node@v4
               with:
-                  node-version: 20.x
+                  node-version-file: '.nvmrc'
             - uses: actions/cache@v4
               with:
                   path: ~/.npm
