--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -4,7 +4,7 @@
     "ignoreFiles": ["build/**/*.css", "Sources/**/*.css", "docs/**/*.css", "special-pages/pages/**/*/dist/*.css"],
     "rules": {
         "csstree/validator": {
-            "ignoreProperties": ["text-wrap"]
+            "ignoreProperties": ["text-wrap", "view-transition-name"]
         },
         "alpha-value-notation": null,
         "at-rule-empty-line-before": null,
