--- a/.github/workflows/asana.yml
+++ b/.github/workflows/asana.yml
@@ -20,6 +20,6 @@ jobs:
                   ASANA_ACCESS_TOKEN: ${{ secrets.ASANA_ACCESS_TOKEN }}
                   ASANA_WORKSPACE_ID: ${{ secrets.ASANA_WORKSPACE_ID }}
                   ASANA_PROJECT_ID: '1208598406046969'
-                  GITHUB_PAT: ${{ secrets.GH_PAT }}
+                  GITHUB_PAT: ${{ secrets.GH_RO_PAT }}
                   USER_MAP: ${{ vars.USER_MAP }}
                   ASSIGN_PR_AUTHOR: 'true'
