--- a/special-pages/package.json
+++ b/special-pages/package.json
@@ -11,9 +11,11 @@
     "build.dev": "npm run build -- --env development",
     "lint-fix": "cd ../ && npm run lint-fix",
     "test-unit": "node --test \"unit-test/*\" \"pages/history/unit-tests/*\" \"pages/duckplayer/unit-tests/*\" \"pages/new-tab/app/freemium-pir-banner/unit-tests/*\"",
-    "test-int": "npm run test-unit && npm run build.dev && playwright test --grep-invert '@screenshots'",
+    "test-int": "playwright test --grep-invert '@screenshots'",
     "test-int-x": "npm run test-int",
-    "test.screenshots": "npm run test-unit && npm run build.dev && playwright test --grep '@screenshots'",
+    "test-int-x-snapshots": "playwright test --grep '@screenshots'",
+    "test-int-x-snapshots-update": "playwright test --grep '@screenshots' --update-snapshots --last-failed",
+    "test.screenshots": "playwright test --grep '@screenshots'",
     "test.windows": "npm run test-int -- --project windows",
     "test.macos": "npm run test-int -- --project macos",
     "test.ios": "npm run test-int -- --project ios",
