--- a/injected/package.json
+++ b/injected/package.json
@@ -12,9 +12,9 @@
     "bundle-trackers": "node scripts/bundleTrackers.mjs --output ../build/tracker-lookup.json",
     "test-unit": "jasmine --config=unit-test/config.json",
     "test-int": "playwright test --grep-invert '@screenshots'",
-    "test-int-x": "npm run test-int",
-    "test-int-x-snapshots": "playwright test --grep '@screenshots'",
-    "test-int-x-snapshots-update": "playwright test --grep '@screenshots' --update-snapshots --last-failed",
+    "test-int-x": "xvfb-run --server-args='-screen 0 1024x768x24' npm run test-int",
+    "test-int-snapshots": "playwright test --grep '@screenshots'",
+    "test-int-snapshots-update": "playwright test --grep '@screenshots' --update-snapshots --last-failed",
     "test": "npm run lint && npm run test-unit && npm run test-int && npm run playwright",
     "serve": "http-server -c-1 --port 3220 integration-test/test-pages",
     "playwright": "playwright test --grep-invert '@screenshots'",
