--- a/special-pages/package.json
+++ b/special-pages/package.json
@@ -13,8 +13,8 @@
     "test-unit": "node --test \"unit-test/*\" \"pages/history/unit-tests/*\" \"pages/duckplayer/unit-tests/*\" \"pages/new-tab/app/freemium-pir-banner/unit-tests/*\"",
     "test-int": "playwright test --grep-invert '@screenshots'",
     "test-int-x": "npm run test-int",
-    "test-int-x-snapshots": "playwright test --grep '@screenshots'",
-    "test-int-x-snapshots-update": "playwright test --grep '@screenshots' --update-snapshots --last-failed",
+    "test-int-snapshots": "playwright test --grep '@screenshots'",
+    "test-int-snapshots-update": "playwright test --grep '@screenshots' --update-snapshots --last-failed",
     "test.screenshots": "playwright test --grep '@screenshots'",
     "test.windows": "npm run test-int -- --project windows",
     "test.macos": "npm run test-int -- --project macos",
