--- a/special-pages/package.json
+++ b/special-pages/package.json
@@ -14,7 +14,7 @@
     "test-int": "playwright test --grep-invert '@screenshots'",
     "test-int-x": "npm run test-int",
     "test-int-snapshots": "playwright test --grep '@screenshots'",
-    "test-int-snapshots-update": "playwright test --grep '@screenshots' --update-snapshots --last-failed",
+    "test-int-snapshots-update": "playwright test --grep '@screenshots' --update-snapshots --last-failed --pass-with-no-tests",
     "test.screenshots": "playwright test --grep '@screenshots'",
     "test.windows": "npm run test-int -- --project windows",
     "test.macos": "npm run test-int -- --project macos",
