--- a/.github/workflows/asana.yml
+++ b/.github/workflows/asana.yml
@@ -15,9 +15,11 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
-            - uses: sammacbeth/action-asana-sync@v6
+            - uses: duckduckgo/action-asana-sync@v9
               with:
                   ASANA_ACCESS_TOKEN: ${{ secrets.ASANA_ACCESS_TOKEN }}
                   ASANA_WORKSPACE_ID: ${{ secrets.ASANA_WORKSPACE_ID }}
                   ASANA_PROJECT_ID: '1208598406046969'
+                  GITHUB_PAT: ${{ secrets.GH_RO_PAT }}
                   USER_MAP: ${{ vars.USER_MAP }}
+                  ASSIGN_PR_AUTHOR: 'true'
