feat(pir): add report metric

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test-int-snapshots": "npm run test-int-snapshots --workspaces --if-present",
     "test-int-snapshots-update": "npm run test-int-snapshots-update --workspaces --if-present",
     "test-clean-tree": "npm run build && sh scripts/check-for-changes.sh",
-    "docs": "typedoc",
+    "docs": "npm cache clean --force && npm ci && typedoc",
     "docs-watch": "typedoc --watch",
     "tsc": "tsc",
     "tsc-watch": "tsc --watch",
@@ -49,7 +49,8 @@
     "stylelint-csstree-validator": "^3.0.0",
     "typedoc": "^0.27.9",
     "typescript": "^5.8.2",
-    "typescript-eslint": "^8.27.0"
+    "typescript-eslint": "^8.27.0",
+    "@duckduckgo/pixel-schema": "github:duckduckgo/pixel-schema#v1.0.5"
   },
   "dependencies": {
     "immutable-json-patch": "^6.0.1"
