Adapt Activity widget for ads and trackers
- Updates UI text, icons, and styles based on whether the browser blocks just trackers or ads and trackers.
- Introduces a `trackerType` config option ('trackersOnly' or 'adsAndTrackers') to control the display.
- Adds new translation strings and a green shield icon for the ads and trackers variant.
- Updates tests and mock data accordingly.

--- a/special-pages/pages/new-tab/messages/types/activity-config.json
+++ b/special-pages/pages/new-tab/messages/types/activity-config.json
@@ -5,6 +5,7 @@
   "required": ["expansion"],
   "properties": {
     "expansion": {"$ref": "expansion.json"},
-    "animation": {"$ref": "animation.json"}
+    "animation": {"$ref": "animation.json"},
+    "trackerType": {"$ref": "tracker-type.json"}
   }
 }
