Adapt Privacy Stats widget for ads and trackers

--- a/special-pages/pages/new-tab/messages/types/activity-config.json
+++ b/special-pages/pages/new-tab/messages/types/activity-config.json
@@ -5,7 +5,6 @@
   "required": ["expansion"],
   "properties": {
     "expansion": {"$ref": "expansion.json"},
-    "animation": {"$ref": "animation.json"},
-    "trackerType": {"$ref": "tracker-type.json"}
+    "animation": {"$ref": "animation.json"}
   }
 }
