--- a/special-pages/pages/new-tab/messages/types/settings.json
+++ b/special-pages/pages/new-tab/messages/types/settings.json
@@ -16,6 +16,16 @@
           "type": "boolean"
         }
       }
+    },
+    "adBlocking": {
+      "type": "object",
+      "required": ["state"],
+      "properties": {
+        "state": {
+          "type": "string",
+          "enum": ["enabled", "disabled"]
+        }
+      }
     }
   }
 }
