--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "stylelint-csstree-validator": "^3.0.0",
     "typedoc": "^0.28.2",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.30.1"
+    "typescript-eslint": "^8.30.1",
+    "urlpattern-polyfill": "^10.0.0"
   },
   "dependencies": {
     "immutable-json-patch": "^6.0.1"
