include tests in codeowners for broker-protection

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -9,6 +9,10 @@ injected/src/features/click-to-load/ @duckduckgo/content-scope-scripts-owners @k
 injected/src/locales/click-to-load/ @duckduckgo/content-scope-scripts-owners @kzar @ladamski @franfaccin @jonathanKingston @shakyShane
 injected/src/features/broker-protection.js @duckduckgo/content-scope-scripts-owners @brianhall @shakyShane @madblex
 injected/src/features/broker-protection/ @duckduckgo/content-scope-scripts-owners @brianhall @shakyShane @madblex
+injected/integration-test/page-objects/broker-protection.js @duckduckgo/content-scope-scripts-owners @brianhall @shakyShane @madblex
+injected/integration-test/broker-protection-tests/ @duckduckgo/content-scope-scripts-owners @brianhall @shakyShane @madblex
+injected/integration-test/mocks/broker-protection/ @duckduckgo/content-scope-scripts-owners @brianhall @shakyShane @madblex
+injected/integration-test/test-pages/broker-protection/ @duckduckgo/content-scope-scripts-owners @brianhall @shakyShane @madblex
 injected/src/features/autofill-password-import.js @duckduckgo/content-scope-scripts-owners @dbajpeyi
 
 # Platform owners
