--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -71,6 +71,12 @@ jobs:
                   name: playwright-report-pages
                   path: special-pages/playwright-report
                   retention-days: 5
+            - uses: actions/upload-artifact@v4
+              if: always()
+              with:
+                  name: playwright-report-injected
+                  path: injected/playwright-report
+                  retention-days: 5
             - name: Build docs
               run: npm run docs
 
