--- a/special-pages/pages/new-tab/messages/protections_setConfig.notify.json
+++ b/special-pages/pages/new-tab/messages/protections_setConfig.notify.json
@@ -2,7 +2,7 @@
   "$schema": "http://json-schema.org/draft-07/schema#",
   "allOf": [
     {
-      "$ref": "types/stats-config.json"
+      "$ref": "types/protections-config.json"
     }
   ]
 }
