--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test-int-snapshots": "npm run test-int-snapshots --workspaces --if-present",
     "test-int-snapshots-update": "npm run test-int-snapshots-update --workspaces --if-present",
     "test-clean-tree": "npm run build && sh scripts/check-for-changes.sh",
-    "docs": "npm cache clean --force && npm ci && typedoc",
+    "docs": "typedoc",
     "docs-watch": "typedoc --watch",
     "tsc": "tsc",
     "tsc-watch": "tsc --watch",
@@ -53,7 +53,6 @@
     "urlpattern-polyfill": "^10.0.0"
   },
   "dependencies": {
-    "@duckduckgo/privacy-configuration": "github:duckduckgo/privacy-configuration#bc8932cb98a49e7811a328c38a42feed4a75bb55",
     "immutable-json-patch": "^6.0.1"
   }
 }
