Unified error detection

--- a/special-pages/pages/duckplayer/messages/customErrorSettings.shared.json
+++ b/special-pages/pages/duckplayer/messages/customErrorSettings.shared.json
@@ -16,6 +16,10 @@
         "signInRequiredSelector": {
           "description": "A selector that, when not empty, indicates a sign-in required error",
           "type": "string"
+        },
+        "youtubeError": {
+          "description": "A selector that, when not empty, indicates a sign-in required error",
+          "type": "string"
         }
       }
     }
