--- a/special-pages/pages/duckplayer/messages/customErrorSettings.shared.json
+++ b/special-pages/pages/duckplayer/messages/customErrorSettings.shared.json
@@ -17,8 +17,8 @@
           "description": "A selector that, when not empty, indicates a sign-in required error",
           "type": "string"
         },
-        "youtubeError": {
-          "description": "A selector that, when not empty, indicates a sign-in required error",
+        "youtubeErrorSelector": {
+          "description": "A selector that, when not empty, indicates a general YouTube error",
           "type": "string"
         }
       }
