Duck Player custom error copy update (#1706)

--- a/special-pages/pages/duckplayer/messages/customErrorSettings.shared.json
+++ b/special-pages/pages/duckplayer/messages/customErrorSettings.shared.json
@@ -16,6 +16,10 @@
         "signInRequiredSelector": {
           "description": "A selector that, when not empty, indicates a sign-in required error",
           "type": "string"
+        },
+        "youtubeErrorSelector": {
+          "description": "A selector that, when not empty, indicates a general YouTube error",
+          "type": "string"
         }
       }
     }
