temp ignore tsc in scriptlets.js

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,8 @@
     "injected/integration-test/test-pages",
     "injected/playwright-report",
     "injected/integration-test/extension",
-    "injected/src/features/Scriptlets",
+    "injected/src/features/scriptlets.js",
+    "injected/src/features/Scriptlets/**/*",
     "special-pages/pages/**/public",
     "special-pages/playwright-report",
     "special-pages/test-results",
