code style fixes

--- a/.prettierignore
+++ b/.prettierignore
@@ -3,6 +3,7 @@ docs/**/*
 injected/src/types
 special-pages/pages/**/types
 injected/integration-test/extension/contentScope.js
+injected/src/features/Scriptlets
 **/*.json
 **/*.md
 **/*.html
