Web interventions: add scriptlet feature (#1742)
* Adguard sizing

* Move to using mode of scriptlets

* Ensure submodule is always checked out

* Namespace attrs

* Add verbose logging for now

* Fix up replace node text

* Add more scriptlets

* Make a default object when attrs are missing

* adjust list of scriptlets to meet popunder needs

* add breakage flag

* don't need local var for debug flag

* fix typo in scriptlets.js and populate source. add exlusion rules for scriptlet submodule.

* fix typo in package-lock

* remove unnecessary scriptlet dependency from package.json, update package-lock.json

* Update README.md

* add dependabot submodule updates

* temp ignore tsc in scriptlets.js

* temp ignore scriptlets in eslint

* change eslint ignore

* try adding ignores to other eslint file

* code style fixes

* add scriptlets to other features

* add Scriptlets to stylelint ignore

* fix failing feature order unit test

* set checkout-submodules to not fetch latest

---------

Co-authored-by: Jonathan Kingston <jkingston@duckduckgo.com>

--- a/injected/package.json
+++ b/injected/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "postinstall": "npm run copy-sjcl",
     "copy-sjcl": "node scripts/generateSJCL.js",
-    "build": "npm run build-types && npm run build-locales && npm run bundle-trackers && npm run bundle-entry-points",
+    "checkout-submodules": "git submodule update --init --recursive --no-fetch",
+    "build": "npm run checkout-submodules && npm run build-types && npm run build-locales && npm run bundle-trackers && npm run bundle-entry-points",
     "bundle-config": "node scripts/bundleConfig.mjs",
     "bundle-entry-points": "node scripts/entry-points.js",
     "build-chrome-mv3": "node scripts/entry-points.js",
