experiment with using npm module instead of submodule

--- a/injected/package.json
+++ b/injected/package.json
@@ -4,7 +4,8 @@
     "postinstall": "npm run copy-sjcl",
     "copy-sjcl": "node scripts/generateSJCL.js",
     "checkout-submodules": "git submodule update --init --recursive --no-fetch",
-    "build": "npm run checkout-submodules && npm run build-types && npm run build-locales && npm run bundle-trackers && npm run bundle-entry-points",
+    "build": "npm run extract-scriptlets && npm run build-types && npm run build-locales && npm run bundle-trackers && npm run bundle-entry-points",
+    "extract-scriptlets": "node scripts/extract-scriptlets.js",
     "bundle-config": "node scripts/bundleConfig.mjs",
     "bundle-entry-points": "node scripts/entry-points.js",
     "build-chrome-mv3": "node scripts/entry-points.js",
