Add test for prod deps

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -108,3 +108,18 @@ jobs:
             - name: Deploy to GitHub Pages
               id: deployment
               uses: actions/deploy-pages@v4
+
+# This job ensures all runtime dependencies are correctly listed in 'dependencies' (not 'devDependencies')
+# by running the build with only production dependencies installed. It will fail if any required dependency is missing.
+    production-deps:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+            - name: Use Node.js
+              uses: actions/setup-node@v4
+              with:
+                  node-version-file: '.nvmrc'
+            - name: Install production dependencies only
+              run: npm ci --production
+            - name: Build with production dependencies
+              run: npm run build
