--- a/injected/package.json
+++ b/injected/package.json
@@ -28,7 +28,8 @@
   "dependencies": {
     "parse-address": "^1.1.2",
     "seedrandom": "^3.0.5",
-    "sjcl": "^1.0.8"
+    "sjcl": "^1.0.8",
+    "minimist": "^1.2.8"
   },
   "devDependencies": {
     "@canvas/image-data": "^1.0.0",
@@ -39,7 +40,6 @@
     "@types/node": "^24.0.3",
     "@typescript-eslint/eslint-plugin": "^8.34.1",
     "fast-check": "^4.1.1",
-    "jasmine": "^5.7.1",
-    "minimist": "^1.2.8"
+    "jasmine": "^5.7.1"
   }
 }
