--- a/injected/package.json
+++ b/injected/package.json
@@ -29,11 +29,11 @@
     "parse-address": "^1.1.2",
     "seedrandom": "^3.0.5",
     "sjcl": "^1.0.8",
-    "minimist": "^1.2.8"
+    "minimist": "^1.2.8",
+    "@duckduckgo/privacy-configuration": "github:duckduckgo/privacy-configuration#2c569c49990bae4ac83578fc9eaef282489d7926"
   },
   "devDependencies": {
     "@canvas/image-data": "^1.0.0",
-    "@duckduckgo/privacy-configuration": "github:duckduckgo/privacy-configuration#2c569c49990bae4ac83578fc9eaef282489d7926",
     "@fingerprintjs/fingerprintjs": "^4.6.2",
     "@types/chrome": "^0.0.326",
     "@types/jasmine": "^5.1.8",
