--- a/injected/package.json
+++ b/injected/package.json
@@ -28,7 +28,11 @@
   "dependencies": {
     "parse-address": "^1.1.2",
     "seedrandom": "^3.0.5",
-    "sjcl": "^1.0.8"
+    "sjcl": "^1.0.8",
+    "minimist": "^1.2.8",
+    "@duckduckgo/privacy-configuration": "github:duckduckgo/privacy-configuration#2c569c49990bae4ac83578fc9eaef282489d7926",
+    "esbuild": "^0.25.4",
+    "urlpattern-polyfill": "^10.1.0"
   },
   "devDependencies": {
     "@canvas/image-data": "^1.0.0",
