--- a/.prettierignore
+++ b/.prettierignore
@@ -3,6 +3,7 @@ docs/**/*
 !injected/docs/**/*
 injected/src/types
 special-pages/pages/**/types
+special-pages/shared/types
 injected/integration-test/extension/contentScope.js
 injected/src/features/Scriptlets
 **/*.json
