--- a/.prettierignore
+++ b/.prettierignore
@@ -2,6 +2,7 @@ build/**/*
 docs/**/*
 injected/src/types
 special-pages/pages/**/types
+special-pages/shared/types
 injected/integration-test/extension/contentScope.js
 injected/src/features/Scriptlets
 **/*.json
