--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,8 +51,11 @@ jobs:
 
             - name: Ensure clean release branch from main
               run: |
-                  git reset --hard origin/main
-                  git clean -fxd
+                # Remove all tracked and untracked files except .git and .github
+                find . -mindepth 1 -maxdepth 1 ! -name '.git' ! -name '.github' -exec rm -rf {} +
+
+                # Copy files from main branch
+                git checkout main -- .
 
             - name: Build release
               run: |
