--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,9 +49,12 @@ jobs:
                   cat ${{ github.workspace }}/CHANGELOG.txt
                   echo "Current tag is: $(git rev-list --tags --max-count=1)"
 
-            - name: Checkout code from main into release branch
+            - name: Ensure clean release branch from main
               run: |
-                  # Checkout the code of main onto releases
+                  # Remove all tracked and untracked files except .git and .github
+                  find . -mindepth 1 -maxdepth 1 ! -name '.git' ! -name '.github' -exec rm -rf {} +
+
+                  # Copy files from main branch
                   git checkout main -- .
 
             - name: Build release
