--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,7 +64,7 @@ jobs:
 
             - name: Check in files
               run: |
-                  git add -f build/ Sources/
+                  git add -f . ':!CHANGELOG.txt'
 
             - name: Commit build files
               uses: stefanzweifel/git-auto-commit-action@v5
