--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,7 @@ jobs:
             - name: Ensure clean release branch from main
               run: |
                   # Remove all tracked and untracked files except .git and .github
-                  find . -mindepth 1 -maxdepth 1 ! -name '.git' ! -name '.github' -exec rm -rf {} +
+                  find . -mindepth 1 -maxdepth 1 ! -name '.git' ! -name '.github' ! -name 'CHANGELOG.txt' -exec rm -rf {} +
 
                   # Copy files from main branch
                   git checkout main -- .
@@ -64,7 +64,7 @@ jobs:
 
             - name: Check in files
               run: |
-                  git add -f build/ Sources/
+                  git add -f . ':!CHANGELOG.txt' ':!node_modules'
 
             - name: Commit build files
               uses: stefanzweifel/git-auto-commit-action@v5
