--- a/special-pages/pages/new-tab/messages/omnibar_getConfig.response.json
+++ b/special-pages/pages/new-tab/messages/omnibar_getConfig.response.json
@@ -2,7 +2,7 @@
   "$schema": "http://json-schema.org/draft-07/schema#",
   "allOf": [
     {
-      "$ref": "types/omnibox-config.json"
+      "$ref": "types/omnibar-config.json"
     }
   ]
 }
